# rust-crud

./: Cargo.toml  README.md
jwt_keys/: private_key.pem  public_key.pem
src/: axum_jwt_service.rs  controller.rs  main.rs  model.rs  upload_service.rs  user_service.rs
