[package]
name = "rust_crud"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "macros"] }
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
tokio = {version="1.36.0", features = ["full"]}
sqlx = {version="0.8.6", features=["postgres", "macros", "runtime-tokio-native-tls"]}
tower-http = { version = "0.5.2", features = ["cors"] }
mime_guess = "2.0.5"
tokio-util = {version="0.7.15", features = ["io"] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"
axum-extra = { version ="0.10.1", features=["typed-header"] }
axum-jwt-auth = "0.5.1"
